Fix buttons on  /UpdateProfile on mobile

--- a/src/pages/ProfileHome.css
+++ b/src/pages/ProfileHome.css
@@ -84,7 +84,7 @@
 
 .ProfileHomeBottom {
   width: 100%;
-  padding-bottom: 1000px;
+  /* padding-bottom: 1000px; */
 }
 
 .UpdateProfileButton button {
